# dart_cec

./: .gitmodules  .metadata  README.md  ffigen.yaml  makefile  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
lib/: dart_cec.dart  dart_cec_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  dart_cec.c  dart_cec.go  go.mod  go.sum
